an end to new things - just editing now?

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -679,6 +679,19 @@ Thus, similar to the way tools were modified to provide new affordances for part
 <!-- the role of playtesting and including warm-up games and session reflections -->
 
 <!-- are explored in relation to the development of agency in the following chapter. -->
+### Addressing GDPs in relation to theoretical understandings of processes of mediation and incorporation in repertoires of practice
+
+<!-- **TADS / sannino vs gutierrez - and the purpose of inclusivity / equity** -->
+
+This section begins an interpretation of the diverse roles of GDPs the game making activity using CHAT concepts, this analysis is continued in the following chapter. Addressing GDPs as a mediational tool. Chapter 5 outlined design decisions and this chapter explored the impact. For example, the uses of the quick start activities, tutorials and code snippets as supporting tools, if viewed in isolation can been as more straight forward, triangular form of subject, tool, object mediation (see Chapter 4 diagram). This chapter and the evolution of the learning design exposed tensions where existing meditational strategies or tools were insufficient and thus innovative form of mediation were needed. Elements of the innovation in the toolset of learning design based on emerging needs of the participants explored in this and previous chapter exemplify the development of new mediational strategies and tools. In line with Sannino [@sannino_transformative_2022], this study frames such innovation within CHAT as transformational agency, a discussion of which forms a significant part of the following chapter.
+
+By way of contrast, Gutiérrez's [@gutierrez_developing_2008] focus on on movement of identity between settings repertoires of practice draws on the importance of wider cultural focus of the learning process, or the “cultural mediation of thinking” (Moll, 1998) cited in [@digiacomo_seven_2017] p.44. Gutiérrez's sees a role of facilitators to facilitate this via learning design. In this chapter the last section examining activity on cultural plane exposed, elements of transfer between different activity systems, supporting Gutiérrez's [@gutierrez_developing_2008] perspective  regarding the importance of transcending borders and linguistic practices between sites of learning.
+
+The examples of this chapter show the importance of GDPS as a lingua franca, as a mediational strategy to facilitate these kinds of flexible responsive collaboration. The process of playtesting often served as a facilitative medium for a shared language and idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design. The use of GDPs in design and in community interaction became integrated with other home and technical practices into an idioculture [@cole_design-based_2016]: a local, non-geographical, non-demographic community where culture emerges via valued behaviours [@lecusay_telementoring_2015]. This chapter has demonstrated that these behaviours could be undertaken in many ways ways including those requiring little commitment. For example even if participants only noticed the use of GDPs and used approximate terminology to comment on them during playtesting, this form of activity can be seen as legitimate peripheral participation [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpful practice contributing to the emerging ecosystem of the learning community.
+
+
+<!-- Several of the observations in vignettes described above, especially those involving interpersonal guided participation, detail the interweaving of novel concepts and practices with existing repertoires. An example being the use of visual prototyping explored above and in more detail in appendix.prototyping. -->
+
 
 
 
@@ -686,23 +699,19 @@ Thus, similar to the way tools were modified to provide new affordances for part
 
 <!-- NOTE To restructure. -->
 
-The last section identified the development and the value of flexible design processes in a way which invites discussion on how best to conceptualise these flexible approaches. Firstly it is of note to make the flow theory in my guiding motivations in terms of participant experience [@perttula_flow_2017]. As a facilitator, my design decisions were often guided by the desire to not detract from participant experience of flow, and thus their coding fluency and engagement in and identification with the overall game-making process. This section synthesises my observations on video data any my own journal reflections on this topic of designing for flow. Flow is however a highly-subjective experience and as such, there is a danger that I privilege my own interests in this analysis, and tendency that I reflect on in the concluding chapter.
+The last section identified the development and the value of flexible design processes in a way which invites discussion on how best to conceptualise these flexible approaches. Firstly it is of note to make the flow theory in my guiding motivations in terms of participant experience [@perttula_flow_2017]. As a facilitator, my design decisions were often guided by the desire to not detract from participant experience of flow, and thus their coding fluency and engagement in and identification with the overall game-making process. This section synthesises my observations on video data any my own journal reflections on this topic of designing for flow. Flow is however a highly-subjective experience and as such, there is a danger that I privilege my own interests in this analysis, and tendency that I reflect on in the concluding chapter. Beyond fluidity, I now identify and explore other characteristics of the emerging design practices and potential strategies to support them. These include: a flexible approach to _design stages_, varied forms of incorporation of external repertoires, and a tension between choice of participant pathway and creative restrictions in the learning design.
 
 <!-- A DESIGN FOR MENTALISTS BY A MENTALIST -->
 
 <!-- Coming back to my motivations as a facilitator and links in the literature of CoL and Papert's Samba school. -->
 <!-- I will cover observations of the characteristics of these emerging design practices, twinned design affordances  and links them with existing  conceptualisation within the literature.  -->
 
-Beyond fluidity, I now identify and explore other characteristics of the emerging design practices and potential strategies to support them. These include: a flexible approach to _design stages_,
 
-  - flexibility in design stage, jumping about in design cycles, rapidly responding to Feedback
-  - via division of labour, and making styles via
-  - incorporation of funds of knowledge, home interests
+
+  <!-- - flexibility in design stage, jumping about in design cycles, rapidly responding to Feedback
+  - Varied forms of identity incorporation via division of labour, and making styles via incorporation of funds of knowledge, home interests
   - via choice of patterns in the MENU
-  - But restrictions on the genre and the template  
-
-
-
+  - But restrictions on the genre and the template   -->
 
 
 <!-- These practices includes emerging norms, DoL, and community behaviour. -->
@@ -711,40 +720,33 @@ Beyond fluidity, I now identify and explore other characteristics of the emergin
 As explored in the literature review design stages as a conceptual design tool is common in CS education, e.g. Resnick's creative learning spiral [@resnick_all_2007, p. 2]. In data analysis I created a coding theme based on a design cycle framework: Ask / Imagine, Plan, Create, Test, Improve, Share. When coding I observed that naturalistic practice rarely matched the progression of the design cycle.  -->
 
 
-**Observations and evidence on flexible design stages**
+<!-- **Observations and evidence on flexible design stages** -->
 
 Observations of participant design behaviour did not align with common design thinking concepts or  advocated in design cycle frameworks  [@resnick_all_2007; @winarno_steps_2020-1; @dam_5_2024] as I initially thought might be the case. The stages were instead fragmented and sometimes happened in parallel. In many interactions I observed improvisational approaches which incorporated ideation, planning, implementation and testing in space of a minute or so. As typified in vignette 1 and 5 , some younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Some older participants also showed rapid, responsive creativity. Grandad Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting  If I had encouraged participants to follow prescribed design stages this may have restrict this flexibility in practice [@kuby_rhizomatic_2016].
 
+In Vignette 4 (see 4.c in particular), we see Ed(c) break out of the more restrictive approach of plodding that Mark(p) advocate for to engage in experimental, improvised design processes with no clear end goal. Mark (p) later joins in Ed(c)'s exploration of sound making software. They start a process of tinkering and messing about with the capability of music making tools in a way which spurs creativity. In this case the joint improvised process sparks a new proposal to incorporate the two soundtracks they create in distinct levels.
+Other pairs often adopted a similar spirit of collaborative improvisation. In V7 Dan(p) makes a suggestion - "Use paper to design?" - to which Toby(c) replies "I'm just going with it." These examples and many observations in this chapter show a varied of ways that home interests, division of labour and varied repertoires from other activity systems are incorporated into new practices.
+
+
 <!-- This concern is echoed in research which critiques a similar, staged approach to creative writing in primary education using a writing cycle approach.   -->
 
-
-In Vignette 4 (see 4.c in particular), we see Ed break out of the more restrictive approach of plodding that his father advocate for to engage in experimental, improvised design processes with no clear end goal. His father joins in his exploration of sound making software. They start a process of tinkering and messing about with the capability of music making tools in a way which spurs creativity. In this case the joint improvised process sparks a new proposal to incorporate the two soundtracks they create in distinct levels. Other pairs often adopted a similar spirit of collaborative improvisation. In V7 Dan(p) makes a suggestion - "Use paper to design?" - to which Toby(c) replies "I'm just going with it."
-
-
-
-
-
-**Tension between choice and restrictions**
-
-While supporting a flexible learner pathway is vital to this approach, the value of restrictions to creativity are also important here. The restricted genre, pixel art format and templated approach act not only as technical  scaffolds but also aligns with research on the value of constraints in facilitating rapid creative improvisation in the areas of music and drama. The domains of programming, game jams and hackathons also use constraints in a similar way [@gabler2005prototype].
+<!-- REFLECTION HERE - REFLECTION WITHIN A ROLE OR WITHIN PLAYTESTING.
+sTUDENT HELPERS - SEE END - OR VIGNETTE ON REFLECTION
+ -->
+<!-- **Varied forms of incorporation of external repertoires** -->
+<!-- **Tension between choice and restrictions** -->
 
 
-
-**How to conceptualise the process overall**
 
 
 <!-- One potentially fruitful perspective is that of rhizomatic design approaches [@de_freitas_classroom_2012]. Research exists on the promise of rhizomatic approaches design thinking in creative educational programmes [@biffi_chasing_2017-1]. However researchers identify significant competencies required including to "identify and synthesize the body of technical and even complex knowledge into a feasible structure" [@biffi_chasing_2017-1, p. 972], which are not well-aligned with the age group of this context. -->
 
 
-While the chaotic directions possible in design evoke a rhizomatic approach to learning [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic], I concur with Biffi et al [ @biffi_chasing_2017-1, p. 972] who identify significant competencies required which are not well-aligned with the age group of this context. Instead here I explore the tools, process and the community in this study mutually encourage an flexible approach often referred to as _jamming_. As explored in Chapter 2 existing research suggests that Game Jams can be profitably used in education contexts [@aurava_game_2021], although there is no agreement on the characteristics game jam pedagogy, and scant guidance on how to address potentially problematic issues (list these),
+Given the disparate nature of the features of designed and emerging pedagogy, it is of value to address ways of conceptualise the overall learning process. While the chaotic directions possible in design evoke a rhizomatic approach to learning [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic], I concur with Biffi et al [ @biffi_chasing_2017-1, p. 972] who identify significant competencies required which are not well-aligned with the age group of this context. While supporting a flexible learner pathway is vital to this approach, the value of restrictions to creativity are also important here. The restricted genre, pixel art format and templated approach act not only as technical  scaffolds but also aligns with research on the value of constraints in facilitating rapid creative improvisation in the areas of music and drama. The domains of programming, game jams and hackathons also use constraints in a similar way [@gabler2005prototype]. Thus, I now explore the tools, process and the community in this study mutually encourage an flexible approach often referred to as _jamming_. As explored in Chapter 2 existing research suggests that Game Jams can be profitably used in education contexts [@aurava_game_2021], although there is no agreement on the characteristics game jam pedagogy, and scant guidance on how to address potentially problematic issues (list these),
 
-The characteristics described above offer a contribution to the literature on Game Jam pedagogy and learning design of this study offers greater scaffolding to the process to facilitate the process of jamming as a way of encouraging co-development of practices and making styles as proposed by Gutiérrez and Rogoff [@gutierrez_cultural_2003].
+The characteristics described above offer a contribution to the literature on Game Jam pedagogy and learning design of this study offers greater scaffolding to the process to facilitate the process of jamming as a way of encouraging co-development of practices and making styles as proposed by Gutiérrez and Rogoff [@gutierrez_cultural_2003]. The characteristics of the design process outline above can be located in the process of jamming in a musical context. For example a song jam is an introduced, familiar framework restricted in that it based on a familiar popular song, within a template of a recognisable genre. However, improvisation and bringing your own style to the process is welcomed. Furthermore, this process is augmented by the group element of the musical jam process where makers pick up techniques from other makers in the group. The value of such metaphors on group coding practice, in particular to explore agency is continued in Chapter 7.
 
-Jamming in a musical context takes place within an introduced but ideally familiar frame work. In musical terms this may be improvising around a familiar popular song, here it is adapting a template of a familiar game genre.
-
-While the processes identified are often improvised, there is a group element of the process where makers pick up techniques from other makers in the group.
-
-
+<!-- This concern is echoed in research which critiques a similar, staged approach to creative writing in primary education using a writing cycle approach.   -->
 
 <!-- There are disparate resources available for game jams but due to the adult centric audience and mix of abilities they are less guided in nature than many supported design processes aimed at school age audiences. -->
 
@@ -769,9 +771,6 @@ These tensions are mirrored in similar research and were highlighted in the prac
 In a closer review of key literature claims of of the value for participants of following design cycles are implied but not supported. Instead stages is are proposed as a tool to "discusses strategies for designing new technologies" [@resnick_all_2007, p. 2]. The following writing discusses the value of flexible approach to design processes observed in my research. -->
 
 
-
-
-
 <!-- ### Returning to the table of varied GDP use with supporting evidence
 
 The introduction introduced the summary table. I now return with a greater focus on the scope of the claims of this research, implications for facilitators and how the findings link to the contents of the following chapter. -->
@@ -780,26 +779,6 @@ The introduction introduced the summary table. I now return with a greater focus
 
 
 
-
-### Addressing GDPs in relation to theoretical understandings of processes of mediation and incorporation in repertoires of practice
-
-<!-- **TADS / sannino vs gutierrez - and the purpose of inclusivity / equity** -->
-
-This section begins an interpretation of the diverse roles of GDPs the game making activity using CHAT concepts, this analysis is continued in the following chapter. Addressing GDPs as a mediational tool. Chapter 5 outlined design decisions and this chapter explored the impact. For example, the uses of the quick start activities, tutorials and code snippets as supporting tools, if viewed in isolation can been as more straight forward, triangular form of subject, tool, object mediation (see Chapter 4 diagram). This chapter and the evolution of the learning design exposed tensions where existing meditational strategies or tools were insufficient and thus innovative form of mediation were needed. Elements of the innovation in the toolset of learning design from P1 to P2 based on emerging needs of the participants exemplify this (is an example needed). In line with Sannino[], this study frames such innovation within CHAT as transformational agency (see Chapter 7).  
-
-By way of contrast, Gutiérrez's [@gutierrez_developing_2008] focus on on movement of identity between settings repertoires of practice draws on the importance of wider cultural focus of the learning process, or the “cultural mediation of thinking” (Moll, 1998) cited in [@digiacomo_seven_2017] p.44. Gutiérrez's sees a role of facilitators to facilitate this via learning design.
-
-
-
-
-
-In this chapter the last section examining activity on cultural plane exposed, elements of transfer between different activity systems, supporting Gutiérrez's [@gutierrez_developing_2008] perspective  regarding the importance of transcending borders and linguistic practices between sites of learning.
-
-The examples of this chapter show the importance of GDPS as a lingua franca, as a mediational strategy to facilitate these kinds of flexible responsive collaboration. The process of playtesting often served as a facilitative medium for a shared language and idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design.
-
-<!-- Several of the observations in vignettes described above, especially those involving interpersonal guided participation, detail the interweaving of novel concepts and practices with existing repertoires. An example being the use of visual prototyping explored above and in more detail in appendix.prototyping. -->
-
-The use of GDPs in design and in community interaction became integrated with other home and technical practices into an idioculture similar to Cole's description of the 5D. This chapter has demonstrated the variety of ways including those requiring little commitment. For example even if participants only noticed the use of GDPs and used approximate terminology to comment on them during playtesting, this form of activity can be seen as legitimate peripheral participation [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpful practice contributing to the emerging ecosystems of the learning community.
 
 
 <!-- While the design processes directly linked to implementing GDPs were among the most significant in the video data, others were present. -->
@@ -828,23 +807,32 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 
 ## Conclusion
 
+The observations of this chapter show the advantages of GDP as an  relatable design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers. On a cultural plane, using GDPs can aid the propagation of technical and social processes game making practices within an emerging community of learners. GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience. On a theoretical plane, this chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared. CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies which can involved into repertoires of practice [@lecusay_telementoring_2015; @gutierrez_learning_2019-1]. These concepts and this framing of learning as participation in community repertoires, are explored in the next chapter in relation to participant agency using examples that extend beyond the use of GDPs to other cultural processes.
+
 <!-- Participants are able to use the affordances of the existing learning design and add their own evolving practice to them as a way of expressing and building agency. -->
 
 <!-- **Practical** -->
 
+ <!-- GDPs functioned as an _inspirational structured design tool_ . -->
+
+<!-- The observations of this chapter show the advantages of GDP as an intermediate, relatable design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers.  -->
 
 
-The observations of this chapter show the advantages of GDP as an intermediate, relatable design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers. The use of GDP concepts can create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate communication, sustaining engagement, planning and division of labour. On a cultural plane, using GDPs can aid the propagation of technical and social processes game making practices within an emerging community of learners. GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience. GDPs functioned as an _inspirational structured design tool_ .
+
+<!-- The use of GDP concepts can create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate communication, sustaining engagement, planning and division of labour.  -->
+
+
+
 
 <!-- **What are the limits of the claims of this research?** It is important to recall the purpose and limitation of these figures outlined in Chapter 4, that this is not designed to claim efficacy of the learning design or to be representative of an average participant (which would require follow up studies of different design). -->
 
 
-NEXT CHAPTER?  The utility of a patterns and their collection as a form _intermediate-level knowledge_ by both researchers and participants  is shown in part by in a growing sense of mastery towards technical processes becoming second nature and the resulting ability to share them with family and other peer groups.
+<!-- NEXT CHAPTER?  The utility of a patterns and their collection as a form _intermediate-level knowledge_ by both researchers and participants  is shown in part by in a growing sense of mastery towards technical processes becoming second nature and the resulting ability to share them with family and other peer groups. -->
 
 <!-- **Theoretical** -->
-On a theoretical plane, this chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared. CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies which can involved into repertoires of practice [@lecusay_telementoring_2015; @gutierrez_learning_2019-1]. These concepts and this framing of learning as participation in community repertoires, are explored in the next chapter in relation to participant agency using examples that extend beyond the use of GDPs to other cultural processes.
 
-While the development of agency has not been the primary focus of this chapter, the processes of community adaptation of GDP use can be directly linked to conceptions of transformative agency explored in Chapter 4. The next chapter explores cultural aspects in greater detail continuing to explore emergent agency in this research.
+
+<!-- While the development of agency has not been the primary focus of this chapter, the processes of community adaptation of GDP use can be directly linked to conceptions of transformative agency explored in Chapter 4. The next chapter explores cultural aspects in greater detail continuing to explore emergent agency in this research. -->
 
 <!-- **Transition to next chapter on agency** -->
 
