--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -807,7 +807,9 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 
 ## Conclusion
 
-The observations of this chapter show the advantages of GDP as an  relatable design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers. On a cultural plane, using GDPs can aid the propagation of technical and social processes game making practices within an emerging community of learners. GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience. On a theoretical plane, this chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared. CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies which can involved into repertoires of practice [@lecusay_telementoring_2015; @gutierrez_learning_2019-1]. These concepts and this framing of learning as participation in community repertoires, are explored in the next chapter in relation to participant agency using examples that extend beyond the use of GDPs to other cultural processes.
+On a theoretical plane, this chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared. CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies which can involved into repertoires of practice [@lecusay_telementoring_2015; @gutierrez_learning_2019-1]. On a cultural plane, using GDPs can aid the propagation of technical and social processes game making practices within an emerging community of learners. GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience.
+
+The observations of this chapter show the advantages of GDP as an  relatable design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers. An exploration of this aspect follows in the next chapter. In addition, the framing of learning as participation with community repertoires, is explored in the next chapter in relation to participant agency.
 
 <!-- Participants are able to use the affordances of the existing learning design and add their own evolving practice to them as a way of expressing and building agency. -->
 
