--- a/_posts/thesis_chapters/tocs/2025-1-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-1-6-Gdps.md_toc.md
@@ -1,52 +1,58 @@
--   [Research Questions - March 2024](#research-questions---march-2024)
--   [Introduction](#introduction)
--   [The role of GDPs in the personal appropriation of concepts and
-    processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes)
-    -   [The interrelationship of GDPs and the development of technical
-        processes](#the-interrelationship-of-gdps-and-the-development-of-technical-processes)
--   [GDPs used in the process of guided
-    participation](#gdps-used-in-the-process-of-guided-participation)
-    -   [Use of a menu of GDPs to assist project navigation and resource
-        organisation](#use-of-a-menu-of-gdps-to-assist-project-navigation-and-resource-organisation)
-    -   [GDPs used to scaffold ideation and prioritisation
-        processes](#gdps-used-to-scaffold-ideation-and-prioritisation-processes)
-    -   [GDPs aiding the process of division of labour
-        (1400)](#gdps-aiding-the-process-of-division-of-labour-1400)
--   [Use of GDPs in the cultural plane / community level of
-    activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
-    -   [The role of GDPs to facilitate learners to design for
-        others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
-    -   [GDPs can facilitate the use of wider funds of knowledge and
-        interest](#gdps-can-facilitate-the-use-of-wider-funds-of-knowledge-and-interest)
-    -   [Evolution and propagation of GDPs concepts during
-        playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
--   [Discussion](#discussion)
-    -   [Addressing the use of GDPs in relation to theoretical
-        understandings of processes of mediation and incorporation in
-        repertoires of
-        practice](#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-incorporation-in-repertoires-of-practice)
-    -   [Observations on emerging design
-        practices](#observations-on-emerging-design-practices)
--   [Conclusion](#conclusion)
--   [MOVED FROM INTRODUCTION](#moved-from-introduction)
-    -   [MOVED FROM GUIDED
-        PARTICIPATION](#moved-from-guided-participation)
-    -   [Future work on abstraction, layers of abstraction GDPs and the
-        MDA
-        framework](#future-work-on-abstraction-layers-of-abstraction-gdps-and-the-mda-framework)
--   [MOVE FROM cH 7 - ANY SPACE HERE?](#move-from-ch-7---any-space-here)
--   [Impact of Side Missions and Maker Types on playtesting
-    behaviours](#impact-of-side-missions-and-maker-types-on-playtesting-behaviours)
-    -   [Reflection on impact on my design
-        process](#reflection-on-impact-on-my-design-process)
-    -   [Limitations of observations and careful statements of
-        potential](#limitations-of-observations-and-careful-statements-of-potential)
-    -   [Emerging use of narratives and graphics which drawing on home
-        funds of knowledge - AVOID OVERLAP AND CHANGE FOCUS TO AGENCY
-        FROM
-        START](#emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge---avoid-overlap-and-change-focus-to-agency-from-start)
-        -   [MOVE LATER/ JUST A SIGNPOST TO LATER - PARK, FOR
-            NOW?](#move-later-just-a-signpost-to-later---park-for-now)
-    -   [Implications for practitioners - MOVE
-        LATER?](#implications-for-practitioners---move-later)
-        -   [A thought on reflection](#a-thought-on-reflection)
+-   [The Use of Gameplay Design Patterns "It's like a project in itself,
+    really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
+    -   [Research Questions - March
+        2024](#research-questions---march-2024)
+    -   [Introduction](#introduction)
+    -   [The role of GDPs in the personal appropriation of concepts and
+        processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes)
+        -   [The interrelationship of GDPs and the development of
+            technical
+            processes](#the-interrelationship-of-gdps-and-the-development-of-technical-processes)
+    -   [GDPs used in the process of guided
+        participation](#gdps-used-in-the-process-of-guided-participation)
+        -   [Use of a menu of GDPs to assist project navigation and
+            resource
+            organisation](#use-of-a-menu-of-gdps-to-assist-project-navigation-and-resource-organisation)
+        -   [GDPs used to scaffold ideation and prioritisation
+            processes](#gdps-used-to-scaffold-ideation-and-prioritisation-processes)
+        -   [GDPs aiding the process of division of labour
+            (1400)](#gdps-aiding-the-process-of-division-of-labour-1400)
+    -   [Use of GDPs in the cultural plane / community level of
+        activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
+        -   [The role of GDPs to facilitate learners to design for
+            others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
+        -   [GDPs can facilitate the use of wider funds of knowledge and
+            interest](#gdps-can-facilitate-the-use-of-wider-funds-of-knowledge-and-interest)
+        -   [Evolution and propagation of GDPs concepts during
+            playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
+    -   [Discussion](#discussion)
+        -   [Addressing the use of GDPs in relation to theoretical
+            understandings of processes of mediation and incorporation
+            in repertoires of
+            practice](#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-incorporation-in-repertoires-of-practice)
+        -   [Observations on emerging design
+            practices](#observations-on-emerging-design-practices)
+    -   [Conclusion](#conclusion)
+    -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
+        -   [MOVED FROM GUIDED
+            PARTICIPATION](#moved-from-guided-participation)
+        -   [Future work on abstraction, layers of abstraction GDPs and
+            the MDA
+            framework](#future-work-on-abstraction-layers-of-abstraction-gdps-and-the-mda-framework)
+    -   [MOVE FROM cH 7 - ANY SPACE
+        HERE?](#move-from-ch-7---any-space-here)
+    -   [Impact of Side Missions and Maker Types on playtesting
+        behaviours](#impact-of-side-missions-and-maker-types-on-playtesting-behaviours)
+        -   [Reflection on impact on my design
+            process](#reflection-on-impact-on-my-design-process)
+        -   [Limitations of observations and careful statements of
+            potential](#limitations-of-observations-and-careful-statements-of-potential)
+        -   [Emerging use of narratives and graphics which drawing on
+            home funds of knowledge - AVOID OVERLAP AND CHANGE FOCUS TO
+            AGENCY FROM
+            START](#emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge---avoid-overlap-and-change-focus-to-agency-from-start)
+            -   [MOVE LATER/ JUST A SIGNPOST TO LATER - PARK, FOR
+                NOW?](#move-later-just-a-signpost-to-later---park-for-now)
+        -   [Implications for practitioners - MOVE
+            LATER?](#implications-for-practitioners---move-later)
+            -   [A thought on reflection](#a-thought-on-reflection)
