i do the CT work in design

--- a/_posts/thesis_chapters/tocs/2025-1-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-1-5-Design.md_toc.md
@@ -19,10 +19,15 @@
             documentation](#c2---contradictions-associated-with-project-navigation-and-use-of-documentation)
             -   [The use of documentation to address
                 contradictions](#the-use-of-documentation-to-address-contradictions)
+                -   [Structuring instructional tutorial resources and
+                    code
+                    snippets](#structuring-instructional-tutorial-resources-and-code-snippets)
         -   [C3 - Responding to tensions and barriers in cultural
             aspects of the game making
             activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
             -   [Social coding processes](#social-coding-processes)
+                -   [Use of side missions to encourage varied creative
+                    practices](#use-of-side-missions-to-encourage-varied-creative-practices)
     -   [Chapter Discussion](#chapter-discussion)
     -   [Parking Lot](#parking-lot)
         -   [Perhaps reintegrate above](#perhaps-reintegrate-above)
