rearraning section on gutierrez

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -231,7 +231,7 @@ Given the limited focus of this thesis, only one dimension of personal appropria
 
 To integrate new gameplay design patterns or adapt existing ones in their games, participants needed to develop unfamiliar technical processes associated with computer coding, as well as foundational digital skills related to using a desktop personal computer. See Appendix: Digital Literacy for further details. One example of a skill developed by many participants was proficiency in keyboard and mouse use. Combined with the ability to navigate internet browser tabs, this facilitated movement between computer code, game prototypes, and supporting web-based documentation. Such personal appropriation and increasing fluidity are well illustrated in Toby’s repeated, solo, incremental changes to level design, as seen in Vignette 1.a. Most participants demonstrated increased fluency, particularly in areas such as creating, uploading, and integrating graphical assets, adjusting game challenges by modifying GDP elements, and engaging in coding processes such as debugging and code patching, which is explored in later sections. In line with CHAT theory, this can be interpreted as the gradual operationalisation of actions that initially required more explicit guidance, as discussed by Leontiev [@leontiev_activity_2009].
 
-While the use of new techniques was driven by the implementation of GDPs, the following observations reveal a complex, interdependent relationship between GDP concepts and emergent technical processes. In line with Rogoff's understanding of personal appropriation as a bi-directional process, where the appropriation of personal knowledge is shaped by and contributes to a broader sociocultural context, participants actively contributed their interpretations of knowledge back into the communities they belonged to. In this case, the community in question was the game-making community. In this process, GDPs functioned as both conceptual tools and structured project stages, facilitating interpersonal knowledge exchange, as explored in the following example. In Vignette 5 (sections V5.a and V5.c), Madiha seeks assistance from her daughter Nasrin to format and export graphical files for use in the game code project. The implementation of her chosen GDPs drives the development of these technical processes, as she must either learn them herself or draw on peer knowledge to complete the task. For instance, changing pen colours in the graphical tool is a process that Nasrin has already internalised and performs effortlessly, whereas Madiha is still deliberately working to build her competency. Nasrin has fully operationalised the process, incorporating it into her repertoire of practices. Similarly, in section V5.d, Madiha receives help from a peer, Ed, in using the cropping tool to remove redundant space at the edges of sprite characters after he playtests her game.
+While the use of new techniques was driven by the implementation of GDPs, the following observations reveal a complex, interdependent relationship between GDP concepts and emergent technical processes. In line with Rogoff's understanding of personal appropriation as a bi-directional process, where the appropriation of personal knowledge is shaped by and contributes to a broader sociocultural context, participants actively contributed their interpretations of knowledge back into the communities they belonged to. In this case, the community in question was the game-making community. In this process, GDPs functioned as both conceptual tools and structured project stages, facilitating interpersonal knowledge exchange, as explored in the following example. In Vignette 5 (sections V5.a and V5.c), Madiha(p) seeks assistance from her daughter Nasrin to format and export graphical files for use in the game code project. The implementation of her chosen GDPs drives the development of these technical processes, as she must either learn them herself or draw on peer knowledge to complete the task. For instance, changing pen colours in the graphical tool is a process that Nasrin has already internalised and performs effortlessly, whereas Madiha is still deliberately working to build her competency. Nasrin has fully operationalised the process, incorporating it into her repertoire of practices. Similarly, in section V5.d, Madiha receives help from a peer, Ed, in using the cropping tool to remove redundant space at the edges of sprite characters after he playtests her game.
 
 
 
