--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -648,7 +648,7 @@ This section begins an interpretation of the diverse roles of GDPs in the game-m
 
 By way of contrast, Gutiérrez's [@gutierrez_developing_2008] focus on the movement of identity between settings' repertoires of practice draws on the importance of a wider cultural focus of the learning process, or the “cultural mediation of thinking” (Moll, 1998), cited in [@digiacomo_seven_2017] p.44. Gutiérrez sees a role for facilitators to facilitate this via learning design. In this chapter, the last section examining activity on the cultural plane exposed elements of transfer between different activity systems, supporting Gutiérrez's [@gutierrez_developing_2008] perspective regarding the importance of transcending borders and linguistic practices between sites of learning.
 
-The examples in this chapter show the importance of GDPs as a lingua franca, as a mediational strategy to facilitate these kinds of flexible, responsive collaboration. The process of playtesting often served as a facilitative medium for a shared language and idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design. The use of GDPs in design and in community interaction became integrated with other home and technical practices into an idioculture [@cole_design-based_2016]: a local, non-geographical, non-demographic community where culture emerges via valued behaviours [@lecusay_telementoring_2015]. This chapter has demonstrated that these behaviours could be undertaken in many ways, including those requiring little commitment. For example, even if participants only noticed the use of GDPs and used approximate terminology to comment on them during playtesting, this form of activity can be seen as legitimate peripheral participation [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpful practice contributing to the emerging ecosystem of the learning community.
+The examples in this chapter show the importance of GDPs as a lingua franca, as a mediational strategy to facilitate these kinds of flexible, responsive collaboration. The process of playtesting often served as a facilitative medium for a shared language and idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design. The use of GDPs in design and in community interaction became integrated with other home and technical practices into an idioculture [@cole_design-based_2016]: a local, non-geographical, non-demographic community where culture emerges via valued behaviours [@lecusay_telementoring_2015]. This chapter has demonstrated that these behaviours could be undertaken in many ways, including those requiring little commitment. For example, even if participants only noticed the use of GDPs and used approximate terminology to comment on them during playtesting, this form of activity can be seen as legitimate peripheral participation (EXPLAIN?) [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpful practice contributing to the emerging ecosystem of the learning community.
 
 
 
